--- a/netlify.toml
+++ b/netlify.toml
@@ -1,14 +1,11 @@
 [build]
 publish = "public"
-command = "hugo --gc --minify"
+command = "go get -u github.com/tdewolff/minify && hugo --gc --minify"
 
 [context.production.environment]
 HUGO_VERSION = "0.56.3"
 HUGO_ENV = "production"
 HUGO_ENABLEGITINFO = "true"
-
-[context.split1]
-command = "go get -u github.com/tdewolff/minify && hugo --gc --minify --enableGitInfo"
 
 [context.split1.environment]
 HUGO_VERSION = "0.56.3"
