--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "^1.0.4",
+    "grunt-cli": "^1.3.2",
     "html-minifier": "^3.5.16",
     "string": "^3.3.3",
     "toml": "^3.0.0"
