--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "hugo server -D",
-    "full": "hugo server --disableFastRender --minify",
+    "full": "hugo server --disableFastRender",
     "build": "hugo --minify && npm run optimize:html && grunt lunr-index",
     "deploy": "npm run build && firebase deploy",
     "optimize:html": "./node_modules/.bin/html-minifier --input-dir ./public/ --output-dir ./public/ --file-ext html -c ./.html-minifier-config.json",
